# video-compliance-pipeline

./: .env.example  README.md  main.py  pyproject.toml
backend/scripts/: index_documents.py
backend/src/api/: server.py  telemetry.py
backend/src/services/: video_indexer.py
