[project]
name = "video-compliance-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.3",
    "azure-monitor-opentelemetry>=1.8.7",
    "azure-search-documents>=12.0.0",
    "azure-storage-blob>=12.28.0",
    "fastapi>=0.136.1",
    "firecrawl-py>=4.25.2",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langsmith>=0.8.3",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
    "yt-dlp>=2026.3.17",
]
